force-app/main/default/objects/Park_Of_Interest__c/Park_Of_Interest__c.object-meta.xml
<CustomObject>
    <description>A junction object between Lead/Contact and an Adventure Park. Allows one person to be interested in many adventure parks.</description>
    <label>Park Of Interest</label>
    <nameField>
        <displayFormat>POI-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parks Of Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>