force-app/main/default/objects/Park_Of_Interest__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>When there is a related account, this field tells us what kind of account it is. Questions have come up on why we need this field when an Account lookup already exists.</description>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>