force-app/main/default/objects/Park_Of_Interest__c/fields/Adventure_Park__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Park__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adventure Park</label>
    <referenceTo>Adventure_Park__c</referenceTo>
    <relationshipLabel>Parks Of Interest</relationshipLabel>
    <relationshipName>Parks_Of_Interest</relationshipName>
    <type>Lookup</type>
</CustomField>