force-app/main/default/objects/Park_Of_Interest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parks Of Interest</relationshipLabel>
    <relationshipName>Parks_Of_Interest</relationshipName>
    <type>Lookup</type>
</CustomField>