force-app/main/default/objects/Park_Of_Interest__c/fields/Inactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactivated_Date__c</fullName>
    <description>Most wonder why this field is here and on the park. Some say it is to make it easy to find records that were deactivated by automation, in case deactivating the Park was a user error.</description>
    <label>Inactivated Date</label>
    <type>Date</type>
</CustomField>