force-app/main/default/objects/Park_Of_Interest__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Parks Of Interest</relationshipLabel>
    <relationshipName>Parks_Of_Interest</relationshipName>
    <type>Lookup</type>
</CustomField>