force-app/main/default/objects/Park_Of_Interest__c/fields/Synced_From_Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Synced_From_Related_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced From Related Contact</label>
    <type>Checkbox</type>
</CustomField>